--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:deploy": "prisma migrate deploy",
-    "railway:build": "npm install && npx prisma generate && npm run build",
+    "railway:build": "npm install --omit=dev && npx prisma generate && npm run build",
     "railway:start": "npx prisma migrate deploy && npm run start",
     "make-admin": "ts-node src/scripts/make-admin.ts",
     "generate-keys": "node generate-keys.js"
