--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prisma:migrate": "prisma migrate dev",
     "prisma:deploy": "prisma migrate deploy",
     "railway:build": "npm install --omit=dev && npx prisma generate && npm run build",
-    "railway:start": "npx prisma migrate deploy && npm run start",
+    "railway:start": "node scripts/start-railway.js",
     "make-admin": "ts-node src/scripts/make-admin.ts",
     "generate-keys": "node generate-keys.js"
   },
