--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:deploy": "prisma migrate deploy",
-    "railway:build": "npm install --omit=dev && npx prisma generate && npm run build",
+    "railway:build": "npm install && npx prisma generate && npm run build",
     "railway:start": "node scripts/start-railway.js",
     "make-admin": "ts-node src/scripts/make-admin.ts",
     "generate-keys": "node generate-keys.js"
@@ -29,6 +29,7 @@
     "@types/pg": "^8.15.5",
     "@types/puppeteer": "^5.4.7",
     "@types/sanitize-html": "^2.16.0",
+    "@types/uuid": "^9.0.7",
     "@types/validator": "^13.15.3",
     "@types/xml2js": "^0.4.14",
     "rimraf": "^5.0.5",
@@ -51,6 +52,7 @@
     "pdf.js-extract": "^0.2.1",
     "pg": "^8.16.3",
     "prisma": "^6.16.3",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "uuid": "^9.0.1"
   }
 }
