--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@types/pg": "^8.15.5",
     "@types/puppeteer": "^5.4.7",
     "@types/sanitize-html": "^2.16.0",
-    "@types/uuid": "^9.0.7",
     "@types/validator": "^13.15.3",
     "@types/xml2js": "^0.4.14",
     "rimraf": "^5.0.5",
@@ -52,7 +51,6 @@
     "pdf.js-extract": "^0.2.1",
     "pg": "^8.16.3",
     "prisma": "^6.16.3",
-    "ts-node": "^10.9.2",
-    "uuid": "^9.0.1"
+    "ts-node": "^10.9.2"
   }
 }
