feat(rag): implement semantic chunking and migrate to OpenAI embeddings
- Replace simple sentence-based chunker with semantic paragraph-aware strategy
- Increase chunk size from 1000 to 1800 chars with 400-char intelligent overlap
- Preserve document structure (paragraphs, headers) during chunking
- Switch from Ollama (embeddinggemma:768d) to OpenAI (text-embedding-3-small:1536d)
- Update vector dimensions in schema and migration (768 → 1536)
- Enhance full document summary detection with additional Spanish phrases
- Improve LLM system prompt for comprehensive summaries and comparisons
- Add explicit formatting instructions to prevent generic responses

BREAKING CHANGE: Vector dimension change requires database reset and document re-indexing

--- a/.env.template
+++ b/.env.template
@@ -1,41 +1,51 @@
-PORT=3005
+# ================================
+# RAILWAY DEPLOYMENT CONFIGURATION
+# ================================
 
-OLLAMA_URL=
-MODEL=
-EMBEDDING_MODEL=
-OLLAMA_TIMEOUT_MS=
+# Server
+PORT=3000
+NODE_ENV=production
 
-JWT_SEED=
+# Security
+JWT_SEED=your-super-secret-jwt-key-change-this-in-production
+ENCRYPTION_KEY=your-32-character-encryption-key-here-change-this
 
-DATABASE_URL=
-PG_HOST=
-PG_PORT=
-PG_USER=
-PG_PASSWORD=
-PG_DB=
-TABLE_VECTOR=
-COL_TEXT=
-COL_SOURCE=
+# API Token (opcional - para endpoints protegidos adicionales)
+X_TOKEN_API=optional-api-token-for-extra-security
 
-MULTIPLE_SYNTHESIS_BOTS_USER_IDS=
-SYNTHESIS_BOT_AI_REVIEW_USER_IDS=
+# Database (Railway PostgreSQL)
+# Railway proveerá automáticamente DATABASE_URL
+# No necesitas configurar estos manualmente en Railway
+DATABASE_URL=postgresql://user:password@host:5432/database
 
+# LLM Provider Configuration
+# Opciones: 'openai' o 'ollama'
+LLM_PROVIDER=openai
 
+# OpenAI (solo necesario si LLM_PROVIDER=openai)
+OPENAI_API_KEY=sk-your-openai-api-key-here
+OPENAI_CHAT_MODEL=gpt-4o-mini
+OPENAI_EMBEDDING_MODEL=text-embedding-3-small
 
-# Tokens de Telegram - 3 bots separados por función
-# Bot para enviar síntesis (archivos DOCX)
-SYNTHESIS_BOT_TOKEN=
+# Ollama (solo necesario si LLM_PROVIDER=ollama)
+OLLAMA_URL=http://localhost:11434
+OLLAMA_CHAT_MODEL=gemma3:4b
+OLLAMA_EMBEDDING_MODEL=embeddinggemma:latest
 
-# Bot para enviar alertas por keywords
-ALERTS_BOT_TOKEN=
+# URLs (Actualiza estas con tus URLs de Railway)
+BACKEND_URL=https://your-railway-backend-url.up.railway.app
+FRONTEND_URL=https://your-railway-frontend-url.up.railway.app
 
-# Bot para enviar alertas de canales de Telegram
-CHANNEL_ALERTS_BOT_TOKEN=
+# Database Configuration (Railway usa estos nombres)
+# Estos son generados automáticamente por Railway cuando agregas PostgreSQL
+PGHOST=your-railway-postgres-host
+PGPORT=5432
+PGUSER=postgres
+PGPASSWORD=your-railway-postgres-password
+PGDATABASE=railway
 
-# Fallback (opcional si configuras los 3 anteriores)
-BOT_GROUP1=
-BOT_TOKEN=
+# Vector Extension Config
+TABLE_VECTOR=document_vectors
+COL_TEXT=text
+COL_SOURCE=source
 
-SERPER_API_KEY=
-
-X_TOKEN_API=
