--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,16 @@
 services:
   postgres:
     image: pgvector/pgvector:pg16
-    container_name: ia-postgres-ds
+    container_name: ia-ds
     restart: unless-stopped
     ports:
-      - "${PG_PORT:-5432}:5432"
+      - 5432:5432
     environment:
-      POSTGRES_DB: ${PG_DB:-iad_db}
-      POSTGRES_USER: ${PG_USER:-postgres}
-      POSTGRES_PASSWORD: ${PG_PASSWORD:-postgres}
+      POSTGRES_DB: iad_db
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${PG_USER:-postgres} -d ${PG_DB:-iad_db}"]
+      test: ["CMD-SHELL", "pg_isready -U postgres -d iad_db"]
       interval: 10s
       timeout: 5s
       retries: 5
