--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
 # Environment variables
 .env
-.env.local
+.env.*
+!.env.template
+!.env.example
+
+# Secrets & Keys
+*.key
+*.pem
+*.cert
+secrets/
+credentials.json
 
 # Dependencies
 node_modules/
@@ -9,24 +18,56 @@ node_modules/
 dist/
 build/
 coverage/
+*.tsbuildinfo
 
 # Logs
 *.log
+logs/
 server.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # OS
 .DS_Store
 Thumbs.db
+*.swp
+*.swo
+*~
 
 # IDE
 .vscode/
 .idea/
-*.swp
-*.swo
+*.sublime-project
+*.sublime-workspace
+.history/
+
+# Testing
+coverage/
+.nyc_output/
+test-results/
 
 # Prisma
 /src/generated/prisma
+prisma/dev.db
+prisma/dev.db-journal
 
-# Local development (mantener docker para local)
+# Uploads & Temp
+uploads/
+temp/
+tmp/
+*.tmp
+
+# Database (local development)
 /mongo
 /postgres
+*.db
+*.sqlite
+*.sqlite3
+
+# Docker volumes
+docker-compose.override.yml
+.docker/
+
+# Railway
+.railway/
